# K_E_R

./: .env.example  .gitignore  README.md  SECURITY.md  _daily_note_spec.md  _frame.md  _persona.md  _watchlist.md  pyproject.toml
.git-hooks/: pre-commit
daily_notes/: 2026-05-09.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  2026-06-02.md
daily_notes/_raw/: 2026-05-12.txt  2026-05-13.txt  (+13 more)
industry_notes/: 2026-W20-반도체.md  2026-W22-2차전지.md
pipeline/: bulk_ticker_refresh.py  business_report_extractor.py  config.py  corp_code_mapper.py  cross_section_consistency.py  daily_note_builder.py  daily_trigger.py  dart_client.py  foreign_flow.py  foreign_holdings.py  frame_loader.py  industry_note_builder.py  llm_client.py  local_data_loader.py  macro_data.py  period_picker.py  pick_next_ticker.py  prompt_builder.py  quarterly_disclosure.py  report_assembler.py  report_quality.py  run_dart.py  run_manual.py  section_builder.py  security_check.py  site_renderer.py  site_styles.py  snapshot.py  source_pack.py  ticker_market_data.py  validator.py  validator_v2_numeric.py  validator_v3_arithmetic.py  watchlist_parser.py  xbrl_parser.py
systemd/: k_e_r-daily-refresh.service  k_e_r-daily-refresh.timer  k_e_r-daily.service  k_e_r-daily.timer  k_e_r-fill-batch.service  k_e_r-fill-batch.timer  k_e_r-notify-failure@.service  k_e_r-weekday.service  k_e_r-weekday.timer  k_e_r-weekend.service  k_e_r-weekend.timer
(+853 files in other folders)
