[project]
name = "report-pipeline"
version = "0.1.0"
description = "DART 기업 종합 진단 자동화 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5",
    "pygments>=2.16",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["pipeline/tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["pipeline*"]
